<resources>
    <string name="app_name" translatable="false">SpaceNewsApplication</string>
    <string name="txtNewsSite">News site:</string>
    <string name="txtPublishedDetail">Published:</string>
    <string name="txtSummaryDetail">Summary:</string>
    <string name="txtSavedForLaterHeader">Title:</string>
    <string name="txtUpdatedDetail">Updated:</string>
    <string name="btnReadArticle">Read Article</string>
    <string name="btnSaveForLater">Save for later</string>
    <string name="inAppName" translatable="false">SPACE NEWS</string>
    <string name="Home_nav">Home</string>
    <string name="Saved_nav">Saved</string>
    <string name="RemoveFromReadLater">Remove from Saved</string>
    <string name="Toast_SavedForLater">Article is saved for later</string>
    <string name="Toast_RemovedFromReadlater"> "Article is removed from saved articels"</string>
    <string name="Service_welcome">"Welcome to Space News"</string>
    <string name="Service_Remember">"Remember, you have saved an article"</string>

</resources>